--- a/src/pages/Home.html
+++ b/src/pages/Home.html
@@ -4,7 +4,7 @@
 	<!-- Begin of header block -->
 	<div class="grid-x grid-margin-x headerBlock">
 		<div class="large-6 medium-4 cell">
-			<center><img src="http://placehold.it/178x40" width="178" ></center>
+			<center><img src="assets/img/Hao.jpg" width="178" ></center>
 		</div>
 		<div class="large-6 medium-8 cell">
 			{{>menu-hover-lines-home}}
@@ -16,7 +16,7 @@
 	<div class="grid-x grid-margin-x bodyBlock">
 		<div class="large-6 medium-12 cell">
 			<div>
-    			<img src="http://placehold.it/350x350" alt="" class="Hao-image">
+    			<img src="assets/img/profile.jpg" alt="" class="Hao-image">
   			</div>
 		</div>
 		<div class="large-6 medium-12 cell introduce">
@@ -25,7 +25,7 @@
 				<h2>CS&Math student at Penn State</h2>
 				<p>I'm a computer programmer with intermediate C++, Python, HTML/CSS, Swift skills and advanced calculus and statistics skills. A self-starter eager to contribute to a growing organization in the technology sector.</p>
 				<h2>Work Experience</h2>
-				<h5><strong>Microsoft (MileIQ) | Growth Engineer Intern | SF | May-Aug 2017</strong></h5>
+				<h5><strong>Microsoft (MileIQ) | Web Development Intern | SF | May-Aug 2017</strong></h5>
 				<p>
 				-   Implenmented Inky from scratch and streamlined front-end development process<br>
 				-	Developed 20+ responsive emails and in-app messages; improved MileIQ's lifecycle email templates<br>
