--- a/src/pages/Projects.html
+++ b/src/pages/Projects.html
@@ -11,23 +11,23 @@
 
 	<div class="grid-container">
 	<div class=" grid-x grid-padding-x bodyBlock">
-		<div class="large-6 medium-6 cell projectBlock">
+		<div class="large-6 medium-6 cell">
 			<center><a href="ProjectStunning.html"><img class="thumbnail" src="assets/img/stunning.jpg"></a></center>
 		</div>
-		<div class="large-6 medium-6 cell projectBlock">
-			<center><img class="thumbnail" src="assets/img/firstWebsite.jpg"></center>
+		<div class="large-6 medium-6 cell">
+			<center><a href="ProjectFirstWebsite.html"><img class="thumbnail" src="assets/img/firstWebsite.jpg"></a></center>
 		</div>
 		<div class="large-6 medium-6 cell">
-			<center><img class="thumbnail" src="assets/img/carGiveAway.jpg"></center>
+			<center><a href="ProjectCGA.html"><img class="thumbnail" src="assets/img/carGiveAway.jpg"></a></center>
 		</div>
 		<div class="large-6 medium-6 cell">
-			<center><img class="thumbnail" src="assets/img/ios.jpg"></center>
+			<center><a href="ProjectIOS.html"><img class="thumbnail" src="assets/img/ios.jpg"></a></center>
 		</div>
 		<div class="large-6 medium-6  cell">
-			<center><img class="thumbnail" src="assets/img/cartAbandon.jpg"></center>
+			<center><a href="ProjectCartAbandon.html"><img class="thumbnail" src="assets/img/cartAbandon.jpg"></a></center>
 		</div>
 		<div class="large-6 medium-6 cell">
-			<center><img class="thumbnail" src="assets/img/IAM.jpg"></center>
+			<center><a href="ProjectIAM.html"><img class="thumbnail" src="assets/img/IAM.jpg"></a></center>
 		</div>
 	</div>
 	</div>
