--- a/src/pages/Home.html
+++ b/src/pages/Home.html
@@ -4,7 +4,7 @@
 	<!-- Begin of header block -->
 	<div class="grid-x grid-margin-x headerBlock">
 		<div class="large-6 medium-4 cell">
-			<center><img src="assets/img/hao.jpg" width="178" ></center>
+			<center><img src="assets/img/Hao.jpg" width="178" ></center>
 		</div>
 		<div class="large-6 medium-8 cell">
 			{{>menu-hover-lines-home}}
@@ -16,7 +16,7 @@
 	<div class="grid-x grid-margin-x bodyBlock">
 		<div class="large-6 medium-12 cell">
 			<div>
-    			<img src="assets/img/profile.JPG" alt="" class="Hao-image">
+    			<img src="assets/img/profile.jpg" alt="" class="Hao-image">
   			</div>
 		</div>
 		<div class="large-6 medium-12 cell introduce">
