--- a/src/pages/ProjectCGA.html
+++ b/src/pages/ProjectCGA.html
@@ -38,19 +38,19 @@
 					
 					<h2>What Did I Do</h2>
 					<ul>
-						<li><h4>Coding from scratch.</h4></li>
-						<li><h4>Discussed on designing, including color, font, padding, mobile version, etc.</h4></li>
-						<li><h4>Involved in discussion about content, element in the emails</h4></li>
-						<li><h4>First email coded by me using <a href="https://foundation.zurb.com/emails/docs/inky.html">Inky</a> that is sent to real users (4 million for each email.)</h4></li>
+						<li><h4>Coded pixel-perfect responsive email templates from scratch.</h4></li>
+						<li><h4>Groomed 5 Car Giveaway emails, and translated email design to email tempaltes. </h4></li>
+						<li><h4>Participated in discussion about content, element in the emails.</h4></li>
+						<li><h4>First email template coded by me using <a href="https://foundation.zurb.com/emails/docs/inky.html">Inky</a> that is sent to MileIQ users (3 million for each email.)</h4></li>
 					</ul>
 
 
 					<h2>What Did I Learn</h2>
 					<ul>
-						<li><h4>Use Inky to code responsive emails. Also learn the best practice of using it.</h4></li>
-						<li><h4>Using litmus to check how well emails display in different clients and devices.</h4></li>
-						<li><h4>Car Give Away campaigns were significantly improving user growth in summer.</h4></li>
-						<li><h4>(the whole process: Project management, brain storming, meetings, discuss with designer...)</h4></li>
+						<li><h4>Used Inky to code responsive emails. Also learned the best practice of using it.</h4></li>
+						<li><h4>Using litmus to check how well emails would display on different mobile devices.</h4></li>
+						<li><h4>Developed eye for design</h4></li>
+						<li><h4>Learned how Car Giveaway campaigns were significantly improving user growth in summer.</h4></li>
 					</ul>
 				
 
