--- a/src/pages/ProjectStunning.html
+++ b/src/pages/ProjectStunning.html
@@ -4,7 +4,7 @@
 	<!-- Begin of header block -->
 	<div class="grid-x grid-margin-x headerBlock">
 		<div class="large-6 medium-4 cell">
-			<center><img src="http://placehold.it/178x40" width="178" ></center>
+			<center><img src="assets/img/hao.jpg" width="250" ></center>
 		</div>
 		<div class="large-6 medium-8 cell">
 			{{>menu-projects}}
@@ -87,6 +87,7 @@
 
 
 	<div class="footerBlock">
+		<p class="text-center">Made by Hao Yu</p>
 		{{>rounded-social-buttons}}
 	</div>
 
