--- a/src/pages/Contact.html
+++ b/src/pages/Contact.html
@@ -1,7 +1,7 @@
 <!-- Begin of header block -->
 	<div class="grid-x grid-margin-x headerBlock">
 		<div class="large-6 medium-4 cell">
-			<center><img src="http://placehold.it/178x40" width="178" ></center>
+			<center><img src="assets/img/hao.jpg" width="250" ></center>
 		</div>
 		<div class="large-6 medium-8 cell" >
 		{{>menu-contact}}
@@ -19,5 +19,6 @@
 	</div>
 
 	<div class="footerBlock">
+		<p class="text-center">Made by Hao Yu</p>
 		{{>rounded-social-buttons}}
 	</div>
