--- a/src/pages/Home.html
+++ b/src/pages/Home.html
@@ -4,7 +4,7 @@
 	<!-- Begin of header block -->
 	<div class="grid-x grid-margin-x headerBlock">
 		<div class="large-6 medium-4 cell">
-			<center><img src="assets/img/hao.jpg" width="178" ></center>
+			<center><img src="assets/img/hao.jpg" width="250" ></center>
 		</div>
 		<div class="large-6 medium-8 cell">
 			{{>menu-hover-lines-home}}
@@ -56,6 +56,7 @@
 	</div> -->
 
 	<div class="footerBlock">
+		<p class="text-center">Made by Hao Yu</p>
 		{{>rounded-social-buttons}}
 	</div>
 
