wrap up last day intern

--- a/src/pages/Contact.html
+++ b/src/pages/Contact.html
@@ -11,7 +11,34 @@
 
 
 	<div class="grid-x grid-margin-x bodyBlock">
-		
+		<div class="grid-x grid-margin-x cell"> 
+			<div class="cell">
+			<h5 class="">If you need to build websites or emails, or if you have any questions for me please send me an email or leave a message! </h5>
+			</div>
+		</div>
+		<div class="grid-x grid-margin-x cell">
+			
+			<div class="large-4 medium-4 cell">
+				<label>Name</label>
+            	<input type="text" placeholder="Name" />
+            </div>
+            <div class="large-4 medium-4 cell">
+            	<label>Email</label>
+            	<input type="text" placeholder="Email" />
+            </div>
+		</div>
+		<div class="grid-x grid-margin-x cell">
+		<div class="large-12 cell">
+            <label>Message</label>
+            <textarea type="text" placeholder="Message"></textarea>
+
+          </div>
+		</div>
+		<div class="grid-x grid-margin-x cell">
+			<div class="cell">
+				<a href="#" class="medium button">Submit</a>   
+			</div>
+		</div>
 	</div>
 
 	<div>
