--- a/src/pages/Home.html
+++ b/src/pages/Home.html
@@ -26,16 +26,16 @@
 				<p>I am a rising junior. A self-starter eager to contribute to a growing organization in the technology sector.</p>
 				<h2>Work Experience</h2>
 				<h5><strong>Microsoft (MileIQ) | Web Development Intern | SF | May-Aug 2017</strong></h5>
-				<p>
-				-   Implenmented Inky from scratch and streamlined front-end development process<br>
-				-	Developed 20+ responsive emails and in-app messages; improved MileIQ's lifecycle email templates<br>
-				-	Revamped MileIQ notification prefrence center in iOS and explored Appboy SDK. (Hackathon project) 
-				</p>
+				<ul>
+				<li>Implenmented Inky from scratch and streamlined front-end development process</li>
+				<li>Developed 20+ responsive emails and in-app messages; improved MileIQ's lifecycle email templates</li>
+				<li>Revamped MileIQ notification prefrence center in iOS and explored Appboy SDK. (Hackathon project) </li>
+				</ul>
 				<h5><strong>V-try AR Technologies | Graphics Intern | DC | Jan-Apr 2015</strong></h5>
-				<p>
-				-	Contributed to website development using HTML & CSS<br>
-				-	Designed graphics and used Photoshop to polish product models (2D image)
-				</p>
+				<ul>
+				<li>Contributed to website development using HTML & CSS</li>
+				<li>Designed graphics and used Photoshop to polish product models (2D image)</li>
+				</ul>
 				<h2>Skills</h2>
 				<ul>
 					<li>Advanced HTML/CSS, Responsive design</li>
